<resources>
    <string name="app_name">VoicePhoto</string>
    <string name="language">Language: </string>
    <string name="photo">Take picture by saying: </string>
    <string name="video">Take video by saying: </string>
    <string name="length">Video length: </string>
    <string name="func">Low tone signals countdown.\nHigh tone marks capture start or end.</string>
    <string name="countdownlength">Countdown: </string>
    <string name="flash">This icon turns on/off the back flashlight.</string>
    <string name="camswitch">This icon switches the front and back cameras.</string>
    <string name="settingsicon">This icon opens settings.</string>

    <string name="setphoto">Set your word for capturing photo:</string>
    <string name="setvideo">Set your word for capturing video:</string>
    <string name="setlength">Set your length for video:</string>
    <string name="setcount">Set your countdown for capture:</string>
    <string name="switchnameEN">EN</string>
    <string name="switchnameCZ">CZ</string>

    <string name="hintPhoto">English keyword for photo capture</string>
    <string name="hintVideo">English keyword for video capture</string>
    <string name="hintLength">Length in seconds</string>
    <string name="hintCount">Countdown in seconds</string>
    <string name="save">Empty fields are not saved</string>

    <string name="backbutton">back</string>
    <string name="savebutton">save</string>
    <string name="capturing_photo">capturing photo</string>
    <string name="turn_off_on_flashlight">turn off/on flashlight</string>
    <string name="change_camera">change camera</string>
    <string name="settings">open settings</string>
    <string name="open_help">open help</string>
</resources>