<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".SettingsActivity">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/backbutton"
        android:src="@drawable/baseline_cancel_24"
        app:tint="#fff" />

    <TextView
        android:id="@+id/changePhoto"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/back"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/setphoto"
        android:textColor="#fff"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextPhoto"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/changePhoto"
        android:layout_marginStart="40dp"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="text"
        android:textColor="#fff"
        android:textColorHint="#5E5E5E"
        android:hint="@string/hintPhoto"
        android:autofillHints="" />

    <TextView
        android:id="@+id/changeVideo"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPhoto"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:text="@string/setvideo"
        android:textColor="#fff"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextVideo"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/changeVideo"
        android:layout_marginStart="40dp"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="text"
        android:textColor="#fff"
        android:textColorHint="#5E5E5E"
        android:hint="@string/hintVideo"
        android:autofillHints=""/>

    <TextView
        android:id="@+id/changeTimer"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextVideo"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:text="@string/setvideo"
        android:textColor="#fff"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTimer"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/changeTimer"
        android:layout_marginStart="40dp"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="#fff"
        android:textColorHint="#5E5E5E"
        android:hint="@string/hintTimer"
        android:autofillHints="-1"/>

    <TextView
        android:id="@+id/savetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextTimer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/save"
        android:textColor="#fff"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/save"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_below="@id/savetext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:importantForAccessibility="no"
        android:src="@drawable/round_check_circle_24"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:tint="#fff"
        android:contentDescription="@string/confirm"/>

</RelativeLayout>