<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".HelpActivity">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_cancel_24"
        app:tint="#fff"
        android:contentDescription="@string/backbutton" />

    <TextView
        android:id="@+id/keywords"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/back"
        android:layout_marginTop="8dp"
        android:text="@string/keywords"
        android:textColor="#fff"
        android:textSize="20sp"
        android:layout_marginStart="40dp"/>

    <TextView
        android:id="@+id/beep"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/keywords"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/func"
        android:textColor="#fff"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/flashImage"
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:src="@drawable/baseline_flash_on_24"
        android:layout_below="@id/beep"
        android:layout_marginTop="25dp"
        android:layout_marginStart="13dp"
        android:layout_alignParentStart="true"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/flash"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/beep"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/flash"
        android:textColor="#fff"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/switchImage"
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:layout_below="@id/flash"
        android:layout_alignParentStart="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="25dp"
        android:importantForAccessibility="no"
        android:src="@drawable/baseline_cameraswitch_24" />

    <TextView
        android:id="@+id/cmsw"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/flash"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/camswitch"
        android:textColor="#fff"
        android:textSize="20sp" />
</RelativeLayout>